tests/fail/12_decl_in_block.lang
функция Начало() : целое {
    пока (истина) {
        функция тест() : пусто {}
    }
    вернуть 0;
}
